# ManiPylator

./: .gitignore  00-start-here.ipynb  00-start-here.ipynb.bak  01-robotics-basics.ipynb  01-symbolic-manipulation.ipynb  02-simulation.ipynb  03-differntial-kinematics.ipynb  10-symbolic-manipulation.ipynb  20-simulation.ipynb  21-headless-simulation.ipynb  31-controlling-physical-manny.ipynb  CONTRIBUTING.md  LICENSE  README.md  Untitled.ipynb  compose.yaml  control-example-genesis.ipynb  control-move-in-heart-shape.ipynb  dagger.json  example-roboticstoolbox-kinematics.ipynb  example-symbolic-path-analysis.ipynb  gcodes.txt  generate-trajectory-example.ipynb  manual-control.ipynb  measured-control-move-in-heart-shape.ipynb  opencv_client.py  panel-genesis-v2.ipynb  pyproject.toml  representing-rotations-with-sympy-rtb.ipynb  requirements.txt  requirements.txt.empiric  run_demo.py  run_mq_visualizer.py  run_pipeline.py  simplifid-control-measured.ipynb  simplified-control-move-in-circle.ipynb  simplified-control-move-in-square.ipynb  stream_viewer.py  system_design.py  test_discovery.py  (+8 more)
.dagger/: pyproject.toml
containers/: Dockerfile  Dockerfile.base
controller/: compose.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  FAQ.md  GETTING_STARTED.md  LICENSE  LOCAL_DEVELOPMENT.md  MQTT_TOPICS.md  RESOURCES.md
examples/: collision_lab.py  frame_display.py  huey_fastapi_client.py  netgear_camera.py  netgear_client.py  netgear_producer.py
extra-notebooks/: analyzing-trajectories-using-sympy-numpy-hvplot.ipynb  comms-control.ipynb  control-move-in-heart-shape.ipynb  example-genesis-camera-cotrols.ipynb  mq-visualizer.ipynb
manipylator/: __init__.py  app.py  base.py  camera_entry.py  collision_explorer.py  collision_oracle_app.py  comms.py  devices.py  example_frame_display.py  example_huey_fastapi_client.py  mq_handlers_demo.py  netgear_producer.py  pipeline.py  schemas.py  tasks.py  test_frame_profiling.py  test_huey_performance.py  try.py  utils.py
manual_tests/: test_belongs_to.py  test_hand_detection.py  (+3 more)
(+76 files in other folders)
